Debugged All Test Errors And Updated Swagger
